# howler

./: .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  404.html  LICENSE  README.fr.md  README.md  index.html  pyrightconfig.json  sitemap.xml
api/: .coveragerc.pytest  .flake8  .gitignore  Dockerfile  MANIFEST.in  README.md  azure-pipelines.yml  diff.txt  generate_howler_conf.sh  pyproject.toml  requirements.md
api/build_scripts/: classification.yml  coverage_reports.py  docker_health.py  generate_classes.py  generate_md_docs.py  keycloak_health.py  mappings.yml  run_tests.py  run_wrapped.py  type_check.py  update_public_repo.py
api/dev/: docker-compose.yml
api/dev/keycloak/: Dockerfile  build.sh  keycloak-realm.json
api/doc/: CONTRIBUTING.md  CONTRIBUTING_INTERNAL.md
api/docker/: Dockerfile  build_container.sh
api/howler/: app.py  config.py  error.py  gunicorn_config.py  healthz.py  patched.py  telemetry.py
api/howler/actions/: __init__.py  add_label.py  add_to_bundle.py  add_to_case.py  change_field.py  demote.py  example_plugin.py  prioritization.py  promote.py  remove_from_bundle.py  remove_label.py  send_to_sentinel.py  transition.py  update_defender_xdr_alert.py
api/howler/api/: __init__.py  base.py  socket.py
api/howler/api/v1/: __init__.py  action.py  analytic.py  auth.py  borealis.py  clue.py  configs.py  dossier.py  help.py  hit.py  notebook.py  overview.py  search.py  template.py  tool.py  user.py  view.py
api/howler/api/v2/: __init__.py  case.py  ingest.py  search.py
api/howler/common/: README.md  classification.py  classification.yml  exceptions.py  hexdump.py  iprange.py  loader.py  net.py  net_static.py  random_user.py  swagger.py
api/howler/common/logging/: __init__.py  audit.py  format.py
api/howler/cronjobs/: __init__.py  correlation.py  retention.py  rules.py  template_migration.py  view_cleanup.py
api/howler/datastore/: README.md  bulk.py  collection.py  constants.py  exceptions.py  howler_store.py  operations.py  schemas.py  store.py  types.py
api/howler/datastore/migrations/: fix_process.py
api/howler/datastore/support/: build.py
api/howler/helper/: azure.py  discover.py  hit.py  oauth.py  search.py  workflow.py  ws.py
api/howler/odm/: README.md  __init__.py  base.py  charter.txt  constants.py  helper.py  howler_enum.py  mixins.py  random_data.py  randomizer.py
api/howler/odm/models/: action.py  analytic.py  assemblyline.py  aws.py  azure.py  case.py  cbs.py  clue.py  config.py  domains_by_subtype.py  dossier.py  email_authentication.py  gcp.py  hit.py  howler_data.py  lead.py  localized_label.py  observable.py  overview.py  pivot.py  record.py  template.py  user.py  view.py
api/howler/overviews/: .markdownlint.yml  basic_example.md  borealis_and_mermaid.md  mermaid.md
api/howler/plugins/: __init__.py  config.py
api/howler/remote/datatypes/: README.md  __init__.py  counters.py  events.py  hash.py  lock.py  set.py  user_quota_tracker.py
api/howler/security/: __init__.py  socket.py  utils.py
api/howler/services/: action_service.py  analytic_service.py  auth_service.py  bundle_compat_service.py  case_service.py  config_service.py  correlation_service.py  docs_service.py  dossier_service.py  event_service.py  hit_service.py  jwt_service.py  lucene_service.py  notebook_service.py  observable_service.py  overview_service.py  search_service.py  template_service.py  user_service.py  viewer_service.py
api/howler/utils/: annotations.py  compat.py  constants.py  dict_utils.py  isotime.py  list_utils.py  lucene.py  path.py  socket_utils.py  str_utils.py  uid.py
api/test/: classification.yml  conftest.py  requirements.txt
api/test/integration/: key.pem  test_datastore.py  test_datastore_add_namespace.py  test_datastore_odm.py  test_event_sink.py  test_hit_mixin.py  test_remote_datatypes.py  test_websocket.py
api/test/integration/actions/: test_add_label.py  test_add_to_case.py  test_change_field.py  test_demote.py  test_prioritization.py  test_promote.py  test_remove_label.py
api/test/integration/api/: test_access_control.py  test_actions.py  test_analytic.py  test_assemblyline.py  test_auth.py  test_base.py  test_bundles.py  test_case_rules.py  test_comment.py  test_doc.py  (+17 more)
api/test/unit/: config-broken-mappings.yml  config-broken.yml  config.yml  mappings.yml  test_access_control.py  test_common.py  test_config.py  test_dict_utils.py  test_exceptions.py  test_log_formatting.py  test_net.py  test_odm.py  test_redis_datatypes.py  test_response_functions.py  test_socket.py  test_socket_utils.py  test_str_utils.py
api/test/utils/: example_hashes.py  oauth_credentials.py  queries.py
client/: .gitignore  LICENSE  README.fr.md  README.md  azure_pipelines.yml  get_test_credentials.sh  pyproject.toml  requirements.txt  setup.py  setup_vscode.sh
client/build_scripts/: coverage_reports.py  run_tests.py  run_wrapped.py  set_version.py  type_check.py  update_public_repo.py
client/howler_client/: __init__.py  client.py  connection.py  logger.py
client/howler_client/common/: dict_utils.py  utils.py
client/howler_client/module/: bundle.py  case.py  comment.py  help.py  hit.py  ingest.py  search_v2.py  user.py  v2.py
client/howler_client/utils/: json_encoders.py
client/test/: conftest.py  docker-compose.yml  requirements.txt  utils.py
client/test/config/: classification.yml  config.ci.yml  config.yml
client/test/integration/: test_bundle.py  test_error_message.py  test_help.py  test_hit.py  test_search.py  test_search_facet.py  test_search_fields.py  test_search_grouped.py  test_search_histogram.py  test_search_stats.py  test_search_stream.py  test_user.py  test_v2_case.py  test_v2_ingest.py  test_v2_search.py
client/test/unit/: test_case.py  test_generate_hash.py  test_ingest.py  test_search_v2.py  test_v2.py
plugins/sentinel/: .coveragerc.pytest  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
plugins/sentinel/build_scripts/: coverage_reports.py  run_tests.py
plugins/sentinel/sentinel/: config.py  manifest.yml
plugins/sentinel/test/: .env.test  conftest.py
(+1243 files in other folders)
